--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <section>
         <h3>Sobre mim:</h3>
         <hr>
-        <p>Olá a todos ! Meu nome é Leandro Guilherme Dias, trabalho até o momento com suporte a usuários e servidores Windows Server por mais de 8 anos,
-            estou estudando JavaScript,HTML5,CSS3 e já entrnado em Node.JS, React e MongDB para ampliar meu conhecimento e conseguir minha primeira vaga,
+        <p>Olá a todos ! Meu nome é Leandro Guilherme Dias, trabalho até o momento com suporte a usuários e servidores Windows Server já a 8 anos,
+            estou estudando JavaScript,HTML5,CSS3 e já entrando em Node.JS, React e MongDB para ampliar meu conhecimento e conseguir minha primeira vaga
             como estagiário,estudo também Jogos Digitais e desenvolvimento na faculdade Estácio em Recife onde irei concluir em Agosto de 2022,
             se me derem a oportunidade do meu primeiro estágio pretendo ajudar ao máximo para o engrandecimento da empresa e profissional,
             para futuramente aprender outras linguagens e tecnologias.
