--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <p>HTML5 na Udemy</p>
         <p>CSS3 na Udemy</p>
         <p>JavaScript na Udemy</p>
+        <p>Bootstrap Digital Innovation</p>
+        <p>Lógica de Programação Digital Innovation</p>
         <p>SQL Server na Udemy</p>
         <p>Em andamento na OneBitCode: Node.JS, React, MongoDB</p>
         <p>Em andamento curso na faculdade estácio em Recife em jogos digitais & desenvolvimento com conlussão em 08/2022</p>
