--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <section>
         <h3>Sessão de Projetos:</h3>
         <hr>
-        <p>Site VM Contábil: https://leandroxxx741.github.io/uploadsitecontabil/<p>
+        <p>Site de portfólio VM Contábil: https://leandroxxx741.github.io/uploadsitecontabil/<p>
+        <p>Aplicação simples de lista de tarefas: https://leandroxxx741.github.io/Lista-de-tarefas</p>
     </section>
         
     
