--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <p>Bootstrap Digital Innovation</p>
         <p>Lógica de Programação Digital Innovation</p>
         <p>SQL Server na Udemy</p>
+        <p>Introdução ao Git e GitHub</p>
+        <p>Projetos ágeis com Scrum</p>
         <p>Em andamento na OneBitCode: Node.JS, React, MongoDB</p>
         <p>Em andamento curso na faculdade estácio em Recife em jogos digitais & desenvolvimento com conlussão em 08/2022</p>
     </section>
